Email send emails html updated

--- a/server/components/EmailSender/Emails/PasswordReset.html
+++ b/server/components/EmailSender/Emails/PasswordReset.html
@@ -1,24 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-	<meta charset="UTF-8">
-	<title>PlanManager - Password Reset Request</title>
+  <meta charset="UTF-8">
+	<link href="https://fonts.googleapis.com/css?family=Poiret+One" rel="stylesheet" type="text/css">
+	<link href="https://fonts.googleapis.com/css?family=Rokkitt" rel="stylesheet" type="text/css">
+  <title>Churchetto - Password Reset Request</title>
 </head>
+
 <body>
-	<div id="container" style="height: 100%">
-		<div style="background-color:#222222;color:#f1f4f6;display:inline-block;width:100%;font-family:'Open Sans', sans-serif;">
+	<div id="container" style="height: 100%;">
+		<div style="background-color:#f4f4f4;color:#3b3a36;display:inline-block;width:100%;font-family:'Poiret One', cursive;">
 			<h1 style="text-decoration:none;color:#fff;font-weight:700;display:inline-block;padding:10px;">
-				PlanManager
+				Churchetto
 			</h1>
 		</div>
-		<div>
-			<h2>Hi __NAME__,</h2>
-			<p>We got a request to reset your PlanManager password.</p>
-        	<div>
-				<a href="__LINK__">Reset Password</a>
-			</div>
-			<p>If you ignore this message, your password won't be changed.</p>
-			<p>If you didn't request a password reset, let us know.</p>
-		</div>
+		<div style="font-family:'Rokkitt', serif;">
+      <h2>Hi __NAME__,</h2>
+      <p>
+				We got a request to reset your Churchetto password. Click the URL below
+				to do this.
+			</p>
+      <p><a href="__LINK__" style="word-break:break-all;">__LINK__</a></p>
+      <p>
+				If you ignore this message, your password won't be changed, and the
+				above link will expire after an hour or two.
+			</p>
+      <p>
+				If you didn't request a password reset, let us know by responding
+				to this email.
+			</p>
     </div>
+  </div>
 </body>
