--- a/server/components/EmailSender/Emails/UserSetupRequest.html
+++ b/server/components/EmailSender/Emails/UserSetupRequest.html
@@ -2,22 +2,26 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>PlanManager - Email Verification</title>
+	<link href="https://fonts.googleapis.com/css?family=Poiret+One" rel="stylesheet" type="text/css">
+	<link href="https://fonts.googleapis.com/css?family=Rokkitt" rel="stylesheet" type="text/css">
+	<title>Churchetto - Email Verification</title>
 </head>
 <body>
-	<div id="container" style="height: 100%">
-		<div style="background-color:#222222;color:#f1f4f6;display:inline-block;width:100%;font-family:'Open Sans', sans-serif;">
+	<div id="container" style="height: 100%;">
+		<div style="background-color:#f4f4f4;color:#3b3a36;display:inline-block;width:100%;font-family:'Poiret One', cursive;">
 			<h1 style="text-decoration:none;color:#fff;font-weight:700;display:inline-block;padding:10px;">
-				PlanManager
+				Churchetto
 			</h1>
 		</div>
-		<div>
+		<div style="font-family:'Rokkitt', serif;">
 			<h2>Hi __NAME__,</h2>
-			<p>We're excited to get you on board with us!</p>
+			<p>
+				We're excited to get you on board with us!
+			</p>
 			<p>
 				We got a registration request to create a user with
-				this email address, so you'll need to verify your
-				email address using the link below before you continue.
+				this email address, so you'll need to verify it using
+				the link below before you can continue.
 			</p>
 			<p><a href="__LINK__" style="word-break:break-all;">__LINK__</a></p>
 			<p>
