--- a/server/components/EmailSender/Emails/PasswordReset.html
+++ b/server/components/EmailSender/Emails/PasswordReset.html
@@ -11,7 +11,7 @@
 <body>
 	<div id="container" style="height: 100%;">
 		<div style="background-color:#f4f4f4;color:#3b3a36;display:inline-block;width:100%;font-family:'Poiret One', cursive;">
-			<h1 style="text-decoration:none;color:#fff;font-weight:700;display:inline-block;padding:10px;">
+			<h1 style="text-decoration:none;font-weight:700;display:inline-block;padding:10px;">
 				Churchetto
 			</h1>
 		</div>
