Updates to minor UI components.

--- a/client/views/index.html
+++ b/client/views/index.html
@@ -9,6 +9,10 @@
 	<title>Churchetto</title>
 </head>
 <body>
-	<div id="container" style="height: 100%"></div>
+	<div id="container" style="height: 100%;">
+		<div style="padding-top:215px;text-align:center;">
+			<img src="/img/wait" />
+		</div>
+	</div>
 	<script src="/js"></script>
 </body>
